# linkedin-insight-engine

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily_post.yml  ecopulse.yml
config/: niche_topics.json  post_formats.json  tones.json
data/: state.json
linkedin_insight_engine/: __init__.py  approval_agent.py  config.py  creator_agent.py  critic_agent.py  image_generator.py  linkedin_engine.py  logger.py  main_draft.py  manager.py  models.py  state_store.py
linkedin_insight_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scratch/: check_linkedin_post.py  debug_gemini_search.py  list_recent_posts.py  test_pollinations.py
scripts/: llm.py  orchestrator.py
scripts/agents/: copywriter.py  curator.py  fact_checker.py  lateral_thinker.py  prompt_engineer.py  publisher.py  scout.py  visualizer.py
state/: latest_published_post.txt  posted_log.json
tests/: test_critic_agent.py  test_ecopulse.py
